[package]
name = "mdns_covert"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mdns_covert"
path = "src/main.rs"

[lib]
name = "mdns_covert"
path = "src/lib.rs"

[dependencies]
mdns-sd = "0.20.1"
clap = { version = "4.6.1", features = ["derive"] }
if-addrs = "0.15.0"
chacha20poly1305 = "0.11.0"
getrandom = "0.4.3"
