[package]
name = "mdns_covert"
version = "0.1.0"
edition = "2024"
authors = ["dest4590 <dest4590@gmail.com>"]
description = "Covert message transmission via mDNS with ChaCha20-Poly1305 encryption"
license = "MIT"
repository = "https://github.com/dest4590/mdns_covert"
homepage = "https://github.com/dest4590/mdns_covert"
documentation = "https://docs.rs/mdns_covert"
readme = "README.md"
keywords = ["mdns", "covert", "encryption", "chacha20"]
categories = ["network-programming", "cryptography"]

[[bin]]
name = "mdns_covert"
path = "src/main.rs"

[lib]
name = "mdns_covert"
path = "src/lib.rs"

[dependencies]
mdns-sd = "0.20.1"
clap = { version = "4.6.1", features = ["derive"] }
if-addrs = "0.15.0"
chacha20poly1305 = "0.11.0"
getrandom = "0.4.3"
rand = { version = "0.10.1", features = ["std", "std_rng"] }
